<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" 
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical"
        android:baselineAligned="false"
        android:id="@+id/proWelcomeView"
        tools:context=".ProActivity">

        <RelativeLayout
            android:id="@+id/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#22BCD3"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto Medium"
                android:layout_marginTop="14dp"
                android:text="@string/pro_welcome_text"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pro_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#22BCD3"
                android:src="@drawable/pro_welcome"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="1"
            android:padding="8dp">

            <TextView
                android:id="@+id/thanks_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto Medium"
                android:layout_marginTop="14dp"
                android:text="@string/thanks_purchase"
                android:textSize="14sp"
                android:alpha=".87"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/invite_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto Regular"
                android:layout_marginTop="14dp"
                android:text="@string/invite_friends"
                android:textSize="14sp"
                android:alpha=".87"
                android:textColor="#000000"
                android:textStyle="bold" />          

            <Button
                android:id="@+id/inviteFriendsBtn"
                android:layout_height="36dp"
                android:layout_width="216dp"
                android:layout_marginTop="20dp"
                android:text="@string/invite_friends_btn"
                android:fontFamily="Roboto Medium" 
                android:textSize="14sp"
                android:elevation="2dp"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:clickable = "true"
                android:background="#B6E3EB"
                android:onClick="inviteFriends" />

            <Button
                android:id="@+id/continueToProBtn"
                android:layout_height="36dp"
                android:layout_width="216dp"
                android:layout_marginTop="40dp"
                android:text="@string/continue_to_pro"
                android:fontFamily="Roboto Medium" 
                android:textSize="14sp"
                android:elevation="2dp"
                android:minHeight="48dp"
                android:textColor="#FFFFFF"
                android:clickable = "true"
                android:background="#0297A7"
                android:onClick="continueToPro" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout> 
