<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:baselineAligned="false"
    android:id="@+id/proAccountView"
    tools:context=".ProAccountActivity">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        class="org.lantern.fragment.TitleBar"
        lantern:backgroundColor="@color/pro_blue_color"
        lantern:titleText="@string/pro_account_header"/>

     <RelativeLayout
        android:id="@+id/pro_account"
        android:layout_width="fill_parent"
        android:layout_height="202dp"
        android:layout_weight="1"
        android:background="@color/pro_blue_color"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/account_management"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/account_management"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/invite_bottom_sheet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F4F6F6"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/get_code_view"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/proAccountText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="14dp"
                android:text=""
                android:textSize="14sp"
                android:padding="20dp"
                android:alpha=".87"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/cancelAccount"
                android:layout_height="36dp"
                android:layout_width="216dp"
                android:layout_marginTop="40dp"
                android:text="@string/update_billing_info"
                android:fontFamily="sans-serif-medium" 
                android:textSize="14sp"
                android:elevation="2dp"
                android:minHeight="48dp"
                android:textAllCaps="true"
                android:textColor="@color/accent_white"
                android:textStyle="bold"
                android:clickable = "true"
                android:background="#0297A7"
                android:layout_centerInParent="true"
                android:onClick="updateBillingInfo" />

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel_pro_account"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:clickable="true"
                android:textColor="@color/link_blue"
                android:layout_marginTop="20dp"
                android:layout_gravity="center" 
                android:gravity="center"
                android:background="@null"
                android:layout_centerHorizontal="true"
                android:onClick="cancelPro"/>


        </LinearLayout>

    </RelativeLayout>

 
 

</LinearLayout>
