<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="#F1F1F1"
    android:id="@+id/desktopView"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:id="@+id/navSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_background"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/signinAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/signinAvatar"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/signinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginTop="14dp"
                android:paddingLeft="10dp"
                android:text="@string/sign_in_pro"
                android:textSize="15sp"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:elevation="5dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:gravity="center_vertical|bottom">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="334dp"
            android:layout_height="206dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="15dp"
            android:background="#F4F6F6"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"> 

            <EditText
                android:id="@+id/sendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif" 
                android:background="@null"
                android:hint="@string/email_hint"
                android:ems="10"
                android:textColor="#BDBDBD"
                android:paddingRight="20dp"
                android:autoText="false"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:gravity="fill_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="textEmailAddress" />

            <View
                android:id="@+id/separator"
                android:background="@color/edittext_color"
                android:layout_below="@+id/sendEmail"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_centerVertical ="true"
                android:layout_alignParentTop="true"
                />

            <TextView
                android:id="@+id/sign_in_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif" 
                android:text=""
                android:alpha=".87"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:gravity="left"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/sendLinkBtn"
        android:layout_height="36dp"
        android:layout_width="216dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_link"
        android:fontFamily="sans-serif" 
        android:textSize="20sp"
        android:elevation="2dp"
        android:minHeight="48dp"
        android:textColor="@color/accent_white"
        android:clickable = "false"
        android:gravity="center"
        android:layout_gravity="center" 
        android:background="@drawable/send_btn"
        android:onClick="sendLink" />

</LinearLayout>
